--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,6 +1,7 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: "edit-item" do |f| %>
   <div class="form">
-    <%= hidden_field_tag "hidden[type]", default_product(product) %>
+    <%#= hidden_field_tag "hidden[type]", default_product(product) %>
+    <%= hidden_field_tag "hidden[type]", product.try(:type) %>
     <%= hidden_field_tag "hidden[product_id]", product.try(:id) %>
     <%= hidden_field_tag "hidden[artist_id]", artist.try(:id) %>
     <%= f.number_field :sku, placeholder: "sku", class: "form-control form-control-sm mr-sm-2" %>
