--- a/app/views/items/fields/_field_set.html.erb
+++ b/app/views/items/fields/_field_set.html.erb
@@ -1,5 +1,5 @@
-<% build_field_set_group(f_hsh[:collection]).each do |ff_hsh| %>
+<% build_field_set_group(f_hsh[:collection], opts).each do |ff_hsh| %>
   <%= f.fields_for :field_sets do |ff| %>
-    <%= render "items/fields/#{ff_hsh[:render_as]}", f: ff, f_hsh: ff_hsh %>
+    <%= render "items/fields/#{ff_hsh[:render_as]}", f: ff, f_hsh: ff_hsh, opts: opts %>
   <% end %>
 <% end %>
