trying to refactor i_params and f_params hash

--- a/app/views/items/fields/_select_field.html.erb
+++ b/app/views/items/fields/_select_field.html.erb
@@ -1,10 +1,10 @@
-<div class="col-4">
+<div class="col-3">
   <div class="input-group input-group-sm mb-3">
     <div class="input-group-prepend">
       <span class="input-group-text"><%= f_hsh[:label] %></span>
     </div>
     <%= f.fields_for :options do |ff| %>
-      <%= ff.collection_select f_hsh[:method], f_hsh[:collection], :id, :field_name, {include_blank: true, selected: f_hsh[:selected]}, {class: "form-control field-param"} %>
+      <%= ff.collection_select f_hsh[:method], f_hsh[:collection], :id, :field_name, {include_blank: true, selected: f_hsh[:selected].try(:id)}, {class: "form-control field-param"} %>
     <% end %>
   </div>
 </div>
