--- a/app/views/items/fields/_select_menu.html.erb
+++ b/app/views/items/fields/_select_menu.html.erb
@@ -1,7 +1,5 @@
 <div class="col-3">
   <div class="input-group input-group-sm mb-3">
-    <%= f.fields_for :field_sets do |ff| %>
-      <%= ff.collection_select f_hsh[:method], f_hsh[:collection], :id, :field_name, {include_blank: true, selected: f_hsh[:selected].try(:id)}, {class: "form-control field-param"} %>
-    <% end %>
+    <%= f.collection_select f_hsh[:method], f_hsh[:collection], :id, :field_name, {include_blank: true, selected: f_hsh[:selected].try(:id)}, {class: "form-control field-param"} %>
   </div>
 </div>
