--- a/app/views/artists/_edit.html.erb
+++ b/app/views/artists/_edit.html.erb
@@ -1,8 +1,25 @@
 <%= form_with model: artist, id: 'artist-edit' do |f| %>
-  <div class="form-inline align-items-center" id="<%= dom_tag(artist, :form, :fields) %>">
-    <button class="btn btn-sm btn-outline-primary" type="submit"><%= (fa_icon "plus") %></button>
-    <% FieldSet.find_by(field_name: 'artist-field').targets.each do |field| %>
-      <%= render "field_items/#{field_folder(field)}/#{field.type.underscore}", origin: artist, field: field, f: f %>
+  <div id="<%= dom_tag(artist, :form, :fields) %>">
+    <div class="col">
+      <div class="form-group">
+        <label>artist name</label>
+        <%= f.text_field :artist_name, class: "form-control form-control-sm", id: 'artist_name' %>
+      </div>
+    </div>
+    <% Artist.tag_field_sets.each do |field_set| %>
+    <div class="row">
+      <% field_set.each do |field| %>
+        <%= f.fields_for :tags, OpenStruct.new(artist.tags) do |ff| %>
+        <div class="col-3">
+          <div class="form-group">
+            <label><%= field.split('_').join(' ') %></label>
+            <%= ff.text_field field, class: "form-control form-control-sm", id: field %>
+          </div>
+        </div>
+        <% end %>
+      <% end %>
+    </div>
     <% end %>
   </div>
+  <button class="btn btn-sm btn-outline-primary" type="submit"><%= (fa_icon "plus") %></button>
 <% end %>
