--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,4 +1,6 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: "edit-item" do |f| %>
+  <h5><span>Tagline: <%= @product_group['description']['title'] %></span></h5>
+  <h5><span>Description: <%= @product_group['description']['body'] %></span></h5>
   <div class="form">
     <%= hidden_field_tag "hidden[type]", product.try(:type) %>
     <%= hidden_field_tag "hidden[product_id]", product.try(:id) %>
@@ -12,7 +14,7 @@
       <%= f.text_field :title, placeholder: "title", class: "form-control form-control-sm mr-sm-2" %>
     </div>
 
-    <% inputs = item.product_group['inputs'] %>
+    <% inputs = @product_group['inputs'] %>
     <div class="row">
       <% inputs['options'].each do |f_hsh| %>
         <%= render "items/fields/#{f_hsh[:render_as]}", f: f, f_hsh: f_hsh %>
