--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -22,8 +22,12 @@
     </div>
 
     <%= f.fields_for :field_sets do |ff| %>
-      <% inputs['field_sets'].each do |scope, set| %>
-        <%= render "items/fields/fields_for", f: ff, scope: scope, set: set %>
+      <% field_set_rows(inputs['field_sets']).each do |field_row| %>
+        <div class="row">
+          <% field_row.each do |scope, set| %>
+            <%= render "items/fields/fields_for", f: ff, scope: scope, set: set %>
+          <% end %>
+        </div>
       <% end %>
     <% end %>
 
