--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,4 +1,4 @@
-<div class="card pb-0" id="<%= dom_tag(supplier, :show) %>">
+<div class="card pb-0" id="<%= dom_tag(@supplier, :show) %>">
   <%= render 'suppliers/nav_bar', supplier: @supplier %>
 
   <table class="table table-hover">
