--- a/app/views/items/fields/_number_field.html.erb
+++ b/app/views/items/fields/_number_field.html.erb
@@ -1,5 +1,6 @@
 <div class="col-3">
-  <div class="input-group input-group-sm mb-3">
+  <label><%= f_hsh[:label] %></label>
+  <div class="input-group input-group-sm">
     <%= f.fields_for :tags do |ff| %>
       <%= ff.number_field f_hsh[:method], value: f_hsh[:selected],  placeholder: f_hsh[:label], class: "form-control" %>
     <% end %>
