--- a/app/views/items/fields/_text_area_field.html.erb
+++ b/app/views/items/fields/_text_area_field.html.erb
@@ -1,5 +1,5 @@
 <div class="input-group input-group-sm">
   <%= f.fields_for :tags do |ff| %>
-    <%= ff.text_field f_hsh[:method], placeholder: f_hsh[:label], class: "form-control" %>
+    <%= ff.text_area_field f_hsh[:method], placeholder: f_hsh[:label], class: "form-control" %>
   <% end %>
 </div>
