--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,7 +5,15 @@
 </div>
 
 <div class="row justify-content-center">
-  <h4><span><%= @item.invoice.supplier.supplier_name %></span> inv: <span><%= @item.invoice.invoice_number %></span></h4>
+  <h4>
+    <a href="<%= supplier_path(@item.invoice.supplier) %>" class="btn btn-link" type="button">
+      <%= @item.invoice.supplier.supplier_name %>
+    </a>
+    <a href="<%= invoice_path(@item.invoice) %>" class="btn btn-link" type="button">
+      <%= @item.invoice.invoice_number %>
+    </a>
+  </h4>
+
 </div>
 <hr>
 
