full refactor of csv export; left off at title_keys

--- a/app/views/products/_edit.html.erb
+++ b/app/views/products/_edit.html.erb
@@ -5,7 +5,8 @@
         <div class="input-group-prepend">
           <span class="input-group-text">type:</span>
         </div>
-        <%= f.select :type, types(Product), {prompt: "- select type -"}, {class: "form-control"} %>
+        <%= product.tags['medium'] %>
+        <%#= f.select :type, types(Product), {prompt: "- select type -"}, {class: "form-control"} %>
       </div>
     </div>
 
