working draft of csv methods; need to add controller for export

--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: "edit-item" do |f| %>
-  <h5><span>Tagline: <%= @product_group['description']['title'] %></span></h5>
+  <h5><span>Tagline: <%= @item.tagline %></span></h5>
   <hr>
-  <h5><span>Description: <%= @product_group['description']['body'] %></span></h5>
+  <h5><span>Description: <%= @item.body %></span></h5>
   <div class="form">
     <%= hidden_field_tag "hidden[type]", product.try(:type) %>
     <%= hidden_field_tag "hidden[product_id]", product.try(:id) %>
