--- a/app/views/items/_table_row.html.erb
+++ b/app/views/items/_table_row.html.erb
@@ -11,7 +11,7 @@
   <th>
     <div class="media">
       <div class="media-body">
-        <%= "#{item.product_group['description']['title']}" %>
+        <%= item.tagline %>
       </div>
     </div>
   </th>
