added sku_range draft method set

--- a/app/views/invoices/_nav_bar.html.erb
+++ b/app/views/invoices/_nav_bar.html.erb
@@ -26,7 +26,7 @@
   </div>
 
   <div class="collapse" id="<%= dom_tag(invoice, :edit) %>" data-parent="#invoice-show">
-    <%= render 'invoices/edit', invoice: invoice %>
+    <%#= render 'invoices/edit', invoice: invoice %>
   </div>
 
   <div class="collapse" id="<%= dom_tag(invoice, :new_sku) %>" data-parent="#invoice-show">
