--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,5 +1,6 @@
-<h1><%= @invoice.supplier.supplier_name %> Invoice</h1>
+<h1><%= @invoice.supplier.supplier_name %>: <%= @invoice.invoice_number %></h1>
 <%#= link_to 'Back', url_for(:back) %>
-
+<%= render 'export_skus/form', invoice: @invoice %>
+<%= render 'invoices/edit', invoice: @invoice %>
 <%= render 'invoices/nav_bar', invoice: @invoice %>
 <%= render 'items/table', invoice: @invoice %>
