--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -1,6 +1,16 @@
-<div class="form-inline" id="edit-invoice">
+<div class="card border border-secondary p-2 mb-2">
   <%= form_with model: invoice, url: supplier_invoice_path(invoice.supplier, invoice) do |f| %>
-    <%= f.number_field :invoice_number, placeholder: "invoice #", class: "form-control form-control-sm mr-sm-2" %>
-    <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">submit</button>
+  <div class="form" id="edit-invoice">
+    <div class="row">
+      <label class="col-1 col-form-label form-control-sm ml-sm-2">edit invoice:</label>
+      <div class="col-2">
+        <%= f.number_field :invoice_number, placeholder: "invoice #", maxlength: 6, class: "form-control form-control-sm mr-sm-2" %>
+      </div>
+      <div class="col-2">
+        <%= f.text_field :invoice_name, placeholder: "invoice name", class: "form-control form-control-sm mr-sm-2" %>
+      </div>
+      <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">edit</button>
+    </div>
+  </div>
   <% end %>
 </div>
