--- a/app/views/export_skus/_form.html.erb
+++ b/app/views/export_skus/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="card border border-secondary p-2 mb-2">
     <div class="form">
       <div class="row">
-        <label class="col-1 col-form-label form-control-sm ml-sm-2">sku range:</label>
+        <label class="col-1 col-form-label form-control-sm ml-sm-2">export:</label>
         <div class="col-2">
           <%= number_field_tag :start_sku, nil, placeholder: "start sku", maxlength: 6, class: "form-control form-control-sm mr-sm-2" %>
         </div>
