--- a/app/views/items/_table.html.erb
+++ b/app/views/items/_table.html.erb
@@ -1,7 +1,9 @@
-<table class="table table-striped table-hover">
+<table class="table table-sm table-striped table-hover">
   <thead>
     <tr>
-      <th scope="col">sku</th>
+      <% invoice_keys.each do |k| %>
+      <th scope="col"><span class="fs-s"><%= k %></span></th>
+      <% end %>
     </tr>
   </thead>
 
