--- a/app/views/search_items/_table.html.erb
+++ b/app/views/search_items/_table.html.erb
@@ -7,7 +7,7 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="search-table">
     <%= render 'search_items/table_body', items: items %>
   </tbody>
 </table>
