--- a/app/views/invoices/search.html.erb
+++ b/app/views/invoices/search.html.erb
@@ -1,9 +1,10 @@
-<h1><%= @invoice.supplier.supplier_name %>: <%= @invoice.invoice_number %></h1>
+<h1><%= @invoice.supplier.supplier_name %>: <%= link_to  @invoice.invoice_number, url_for(:back) %></h1>
+
 
 <div id="search-form">
-  <%= render 'search_items/form', invoice: @invoice, items: @items %>
+  <%= render 'search_items/form', invoice: @invoice, items: @items['opt_set'], inputs: @items['inputs'] %>
 </div>
 
 <div id="search-table">
-  <%= render 'search_items/table', items: @items %>
+  <%= render 'search_items/table', items: @items['search_results'] %>
 </div>
