--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,7 +6,8 @@
 
 <div class="row justify-content-center">
   <h4>
-    <a href="<%= supplier_path(@item.invoice.supplier) %>" class="btn btn-link" type="button">
+    <!-- <a href="<%#= supplier_path(@item.invoice.supplier) %>" class="btn btn-link" type="button"> -->
+    <a href="<%= suppliers_path %>" class="btn btn-link" type="button">
       <%= @item.invoice.supplier.supplier_name %>
     </a>
     <a href="<%= invoice_path(@item.invoice) %>" class="btn btn-link" type="button">
