--- a/app/views/search_items/_table.html.erb
+++ b/app/views/search_items/_table.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <% Item.item_search_keys.each do |k| %>
-        <th scope="col"><span class="fs-s"><%= k %></span></th>
+        <th scope="<%="#{search_tags[k]['col']}"%>"><span class="fs-s"><%= search_tags[k]['label'] %></span></th>
       <% end %>
     </tr>
   </thead>
