--- a/app/views/search_items/_table_row.html.erb
+++ b/app/views/search_items/_table_row.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <% product_item_media(item.csv_tags).each do |row| %>
     <td>
-      <span class="fs-s"><%= row %></span>
+      <span class="fs-xs"><%= row %></span>
     </td>
   <% end %>
 </tr>
