--- a/app/views/search_items/_form.html.erb
+++ b/app/views/search_items/_form.html.erb
@@ -1,10 +1,9 @@
 <%= form_with model: Item.new, url: search_invoice_search_items_path(invoice), method: :get, id: "search-items" do |f| %>
-  <div class="form card border border-secondary p-2 pl-3 mb-2">
-    <div class="row">
+  <div class="form card border border-secondary p-1 mb-2">
+    <div class="form-row">
       <% inputs.each do |k, opt_hsh| %>
-        <%= render 'search_items/input_field', k: k, opts: opt_hsh['opts'], selected: opt_hsh['selected'] %>
+        <%= render 'search_items/input_field', k: k, opts: opt_hsh['opts'], selected: opt_hsh['selected'], col: search_tags[k]['col'] %>
       <% end %>
-      <!-- <button class="btn btn-sm btn-outline-primary form-control-sm mx-3" type="submit">submit</button> -->
     </div>
   </div>
 <% end %>
