--- a/app/views/search_items/_input_field.html.erb
+++ b/app/views/search_items/_input_field.html.erb
@@ -1,5 +1,5 @@
-<div class="form-row">
-  <div class="input-group input-group-sm mx-3 border border-secondary rounded">
+<div class="<%="#{col}"%>">
+  <div class="input-group input-group-sm">
     <%= select_tag "search_items[search][#{k}]", options_for_select(opts, selected), {include_blank: true, class: "form-control search-select"} %>
   </div>
 </div>
