--- a/app/views/search_items/search.js.erb
+++ b/app/views/search_items/search.js.erb
@@ -1,2 +1,3 @@
 $("#search-items").html("<%= j render 'search_items/form', invoice: @invoice, items: @items['opt_set'], inputs: @items['inputs'] %>");
-$("#search-table").html("<%= j render 'search_items/table', items: @items['search_results'] %>");
+//$("#search-table").html("<%#= j render 'search_items/table', items: @items['search_results'] %>");
+$("#search-table").html("<%= j render 'search_items/index', items: @items['search_results'] %>");
