--- a/app/views/skus/create.js.erb
+++ b/app/views/skus/create.js.erb
@@ -1,2 +1,2 @@
-$("#new-skus").replaceWith("<%= j render 'skus/form', invoice: @invoice %>");
+$("#new-skus").replaceWith("<%= j render 'search_items/sku_form', invoice: @invoice %>");
 $("#items-table").replaceWith("<%= j render 'items/table', invoice: @invoice %>");
