--- a/app/views/search_items/_form.html.erb
+++ b/app/views/search_items/_form.html.erb
@@ -1,6 +1,11 @@
 <%= form_with model: Item.new, url: search_invoice_search_items_path(invoice), method: :get, id: "search-items" do |f| %>
   <div class="form card border border-secondary p-1 mb-2">
+    <%= hidden_field_tag "hidden[index]" %>
     <div class="form-row">
+      <!-- <button class="btn btn-sm btn-secondary ml-1 text-sm text-light font-weight-light reset-select" type="button"><%#= (fa_icon "repeat") %></button> -->
+      <a href="<%= invoice_search_items_path(invoice) %>" class="btn btn-sm btn-secondary ml-1 text-sm text-light font-weight-light reset-select" data-remote="true">
+        <%= (fa_icon "repeat") %>
+      </a>
       <% inputs.each do |k, opt_hsh| %>
         <%= render 'search_items/input_field', k: k, opts: opt_hsh['opts'], selected: opt_hsh['selected'], col: search_tags[k]['col'] %>
       <% end %>
