--- a/app/views/skus/_form.html.erb
+++ b/app/views/skus/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="form card border border-secondary p-2 mb-2">
     <div class="row">
 
-      <label class="col-1 col-form-label form-control-sm ml-sm-2">sku range!:</label>
+      <label class="col-1 col-form-label form-control-sm ml-sm-2">sku range:</label>
       <div class="col-4">
         <%= f.text_field :skus, placeholder: "enter sku range", class: "form-control form-control-sm mr-sm-2" %>
       </div>
