--- a/app/views/items/_table_row.html.erb
+++ b/app/views/items/_table_row.html.erb
@@ -5,7 +5,7 @@
     </a>
   </td>
 
-  <% invoice_media(item.csv_tags).each do |row| %>
+  <% table_row(item.csv_tags).each do |row| %>
     <td>
       <span class="fs-s"><%= row %></span>
     </td>
