refactored search fn to handle artist/title as filters; added js fns to set artist/title in sku_form; added js disable for submit btn unless sku range entered

--- a/app/views/invoices/search.html.erb
+++ b/app/views/invoices/search.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @invoice.supplier.supplier_name %>: <%= link_to  @invoice.invoice_number, url_for(:back) %></h1>
 
 <div id="search-form">
-  <%= render 'search_items/form', invoice: @invoice, hattrs: @items['hattrs'] %>
+  <%= render 'search_items/form', invoice: @invoice, hattrs: @items['hattrs'], scope: @items['scope'], attrs: @items['attrs'] %>
 </div>
 
 <%= render 'search_items/sku_form', invoice: @invoice %>
