--- a/app/views/search_items/_index.html.erb
+++ b/app/views/search_items/_index.html.erb
@@ -3,8 +3,8 @@
     <button type="button" class="list-group-item list-group-item-action py-1" id="<%= item.id %>" data-toggle="list" role="tab">
       <div class="row">
         <% search_cols(item.csv_tags).each do |params| %>
-          <div class="<%= params['col'] %>">
-            <span class="fs-s"><%= params['cell'] %></span>
+          <div class="<%= "#{params['col']}" %>">
+            <span class="fs-s"><%= abbrv_attr_tags(params['table-data']) %></span>
           </div>
         <% end %>
       </div>
