--- a/app/views/search_items/_sku_form.html.erb
+++ b/app/views/search_items/_sku_form.html.erb
@@ -4,16 +4,21 @@
     <div class="row">
 
       <label class="col-1 col-form-label form-control-sm ml-sm-2">sku range:</label>
-      <div class="col-4">
-        <%= f.text_field :skus, placeholder: "enter sku range", class: "form-control form-control-sm mr-sm-2" %>
+      <div class="col-3">
+        <%= f.text_field :skus, placeholder: "enter sku range", class: "form-control form-control-sm mr-sm-2 required-field" %>
+      </div>
+
+      <label class="col-1 col-form-label form-control-sm ml-sm-2">title:</label>
+      <div class="col-2">
+        <%= f.text_field :title, placeholder: "enter title", class: "form-control form-control-sm mr-sm-2" %>
       </div>
 
       <label class="col-1 col-form-label form-control-sm ml-sm-2">artist:</label>
-      <div class="col-4">
+      <div class="col-2">
         <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true}, class: "form-control form-control-sm mr-sm-2" %>
       </div>
 
-      <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">submit</button>
+      <button class="btn btn-sm btn-outline-primary form-control-sm disabled-btn" disabled="disabled" type="submit">submit</button>
     </div>
   </div>
 <% end %>
