--- a/app/views/search_items/search.js.erb
+++ b/app/views/search_items/search.js.erb
@@ -1,2 +1,2 @@
-$("#search-items").html("<%= j render 'search_items/form', invoice: @invoice, items: @items['opt_set'], hattrs: @items['hattrs'] %>");
+$("#search-items").html("<%= j render 'search_items/form', invoice: @invoice, items: @items['opt_set'], hattrs: @items['hattrs'], scope: @items['scope'], attrs: @items['attrs'] %>");
 $("#search-table").html("<%= j render 'search_items/index', items: @items['search_results'] %>");
