--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
         <a href="<%= suppliers_path %>" class="nav-link text-white">
           Suppliers
         </a>
+        <a href="<%= invoices_path %>" class="nav-link text-white">
+          Invoices
+        </a>
         <a href="<%= artists_path %>" class="nav-link text-white">
           Artists
         </a>
@@ -25,9 +28,6 @@
         </a>
         <a href="<%= product_items_path %>" class="nav-link text-white">
           Product-Items
-        </a>
-        <a href="<%= product_search_index_path %>" class="nav-link text-white">
-          Product Search
         </a>
       </nav>
       <%= yield %>
