--- a/app/views/items/fields/_number_field.html.erb
+++ b/app/views/items/fields/_number_field.html.erb
@@ -2,7 +2,7 @@
   <label><%= f_hsh[:label] %></label>
   <div class="input-group input-group-sm">
     <%= f.fields_for :tags do |ff| %>
-      <%= ff.number_field f_hsh[:method], value: f_hsh[:selected],  placeholder: f_hsh[:label], class: "form-control" %>
+      <%= ff.number_field f_hsh[:method], value: f_hsh[:selected],  placeholder: f_hsh[:label], step: 0.5, class: "form-control" %>
     <% end %>
   </div>
 </div>
