--- a/app/views/products/_edit.html.erb
+++ b/app/views/products/_edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-5">
       <div class="input-group input-group-sm mb-3">
         <div class="input-group-prepend">
-          <span class="input-group-text">type:</span>
+          <span class="input-group-text">type!:</span>
         </div>
         <%= product.tags['medium'] %>
         <%#= f.select :type, types(Product), {prompt: "- select type -"}, {class: "form-control"} %>
