--- a/app/views/item_products/show.html.erb
+++ b/app/views/item_products/show.html.erb
@@ -23,10 +23,8 @@
       <%#= render "items/artist" %>
     </div>
 
-    <!-- <div class="card border border-secondary mb-2" id="search-card"> -->
     <div class="card border border-secondary mb-2" id="item-products-aside">
-      <%= render "item_products/index", invoice: @invoice, item: @item, product: @product, products: @products %>
-      <%#= render "items/search_card", products: @products, input_group: @input_group %>
+      <%= render "item_products/index", products: @products, item: @item %>
     </div>
   </div>
 
