--- a/app/views/item_products/show.html.erb
+++ b/app/views/item_products/show.html.erb
@@ -7,7 +7,7 @@
 <div class="row justify-content-center">
   <h4>
     <a href="<%= suppliers_path %>" class="btn btn-link" type="button">
-      <%= @item.invoice.supplier.supplier_name %>
+      <%#= @item.invoice.supplier.supplier_name %>
     </a>
     <a href="<%= invoice_path(@item.invoice) %>" class="btn btn-link" type="button">
       <%= @item.invoice.invoice_number %>
