--- a/app/views/items/fields/_number_field.html.erb
+++ b/app/views/items/fields/_number_field.html.erb
@@ -1,8 +1,6 @@
 <div class="col-3">
-  <label><%= f_hsh[:label] %></label>
+  <label><%#= f_hsh[:label] %></label>
   <div class="input-group input-group-sm">
-    <%= f.fields_for :tags do |ff| %>
-      <%= ff.number_field f_hsh[:method], value: f_hsh[:selected],  placeholder: f_hsh[:label], step: 0.5, class: "form-control" %>
-    <% end %>
+    <%= f.number_field f_hsh[:method], value: f_hsh[:selected],  placeholder: f_hsh[:f_name], step: 0.5, class: "form-control" %>
   </div>
 </div>
