--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -22,16 +22,31 @@
     <div class="card border border-secondary px-3 py-2 mb-2">
       <%#= render "items/artist" %>
     </div>
-
+      <%#= render "item_products/aside", item: @item, product: @item.product, products: @products %>
     <!-- <div class="card border border-secondary mb-2" id="search-card"> -->
     <div class="card border border-secondary mb-2" id="item-products-aside">
-      <%= render "item_products/index", invoice: @invoice, item: @item, product: @product, products: @products %>
+      <div class="card-header">
+        <%= render "item_products/forms/post", item: @item, product: @item.product %>
+        <%= render "item_products/forms/patch", item: @item, product: @item.product %>
+        <%= render "item_products/forms/delete", item: @item, product: @item.product %>
+      </div>
+
+      <div class="card-body" id="tab-pane">
+        <%#= render "item_products/index", item: @item, products: @products %>
+        <div class="list-group" id="item-products-index" role="tablist">
+          <% @products.each do |product| %>
+            <%= render "item_products/product", item: @item, product: product %>
+          <% end %>
+        </div>
+      </div>
       <%#= render "items/search_card", products: @products, input_group: @input_group %>
     </div>
   </div>
 
+
   <div class="col-8">
     <div id="show-card">
+      <%= render "item_fields/edit", item: @item %>
       <%#= render "items/edit", invoice: @item.invoice, item: @item, product: @product, artist: @artist %>
     </div>
   </div>
