--- a/app/views/item_fields/_text_area_field.html.erb
+++ b/app/views/item_fields/_text_area_field.html.erb
@@ -1,6 +1,6 @@
 <div class="col-12">
   <label><%#= f_hsh[:label] %></label>
   <div class="input-group input-group-sm">
-    <%= f.text_area f_hsh[:method], value: f_hsh[:selected], placeholder: f_hsh[:f_name], class: "form-control" %>
+    <%= f.text_area f_hsh[:f_name], value: f_hsh[:selected], placeholder: f_hsh[:f_name], class: "form-control" %>
   </div>
 </div>
