--- a/app/views/item_fields/_select_field.html.erb
+++ b/app/views/item_fields/_select_field.html.erb
@@ -1,6 +1,6 @@
 <div class="col-3">
   <label><%#= f_hsh[:label] %></label>
   <div class="input-group input-group-sm">
-    <%= f.collection_select f_hsh[:method], f_hsh[:f_obj].options, :id, :field_name, {include_blank: true, selected: f_hsh[:selected]}, {class: "form-control field-param"} %>
+    <%= f.collection_select f_hsh[:f_name], f_hsh[:f_val].options, :id, :field_name, {include_blank: true, selected: f_hsh[:selected]}, {class: "form-control field-param"} %>
   </div>
 </div>
