--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -19,27 +19,27 @@
 
 <div class="row justify-content-center">
   <div class="col-4">
+
     <div class="card border border-secondary px-3 py-2 mb-2">
       <%#= render "items/artist" %>
     </div>
-      <%#= render "item_products/aside", item: @item, product: @item.product, products: @products %>
-    <!-- <div class="card border border-secondary mb-2" id="search-card"> -->
+
     <div class="card border border-secondary mb-2" id="item-products-aside">
       <div class="card-header">
+        <%= render "item_products/forms/search", item: @item, inputs: @inputs %>
         <%= render "item_products/forms/post", item: @item, product: @item.product %>
         <%= render "item_products/forms/patch", item: @item, product: @item.product %>
         <%= render "item_products/forms/delete", item: @item, product: @item.product %>
       </div>
 
       <div class="card-body" id="tab-pane">
-        <%#= render "item_products/index", item: @item, products: @products %>
         <div class="list-group" id="item-products-index" role="tablist">
           <% @products.each do |product| %>
             <%= render "item_products/product", item: @item, product: product %>
           <% end %>
         </div>
       </div>
-      <%#= render "items/search_card", products: @products, input_group: @input_group %>
+
     </div>
   </div>
 
