refactored way to add artist to an item via new controller/form; moved update context methods from field_crud to crudable

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -21,7 +21,7 @@
   <div class="col-4">
 
     <div class="card border border-secondary px-3 py-2 mb-2">
-      <%#= render "items/artist" %>
+      <%= render "item_artists/update", item: @item, artist: @item.artist %>
     </div>
 
     <div class="card border border-secondary mb-2" id="item-products-aside">
