--- a/app/views/item_fields/_number_field.html.erb
+++ b/app/views/item_fields/_number_field.html.erb
@@ -1,6 +1,6 @@
 <div class="col-2">
   <label><%#= f_hsh[:label] %></label>
   <div class="input-group input-group-sm">
-    <%= f.number_field f_hsh[:f_name], value: f_hsh[:selected],  placeholder: f_hsh[:f_name], step: 0.5, class: "form-control" %>
+    <%= f.number_field f_hsh[:f_name], value: f_hsh[:selected],  placeholder: f_hsh[:f_name], step: 0.5, class: "form-control input-field" %>
   </div>
 </div>
