--- a/app/views/item_fields/_text_field.html.erb
+++ b/app/views/item_fields/_text_field.html.erb
@@ -1,3 +1,3 @@
 <div class="input-group input-group-sm">
-  <%= f.text_field f_hsh[:f_name], placeholder:  f_hsh[:f_name], class: "form-control" %>
+  <%= f.text_field f_hsh[:f_name], placeholder:  f_hsh[:f_name], class: "form-control input-field" %>
 </div>
