refactored most concerns

--- a/app/views/item_fields/_text_field.html.erb
+++ b/app/views/item_fields/_text_field.html.erb
@@ -1,3 +1,5 @@
-<div class="input-group input-group-sm">
-  <%= f.text_field f_hsh[:f_name], placeholder:  f_hsh[:f_name], class: "form-control input-field" %>
+<div class="col-2">
+  <div class="input-group input-group-sm">
+    <%= f.text_field f_hsh[:f_name], value: f_hsh[:selected], placeholder:  f_hsh[:f_name], class: "form-control field-param" %>
+  </div>
 </div>
