--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,9 +1,7 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: "edit-item" do |f| %>
-  <h5><span>Tagline: <%#= @item.tagline %></span></h5>
-  <hr>
-  <h5><span>Search: <%#= @item.search_tagline %></span></h5>
-  <hr>
-  <h5><span>Description: <%#= @item.body %></span></h5>
+  <h5><span>Tagline: <%= @item.input_group[:attrs].dig('tagline') %></span></h5>
+  
+  <h5><span>Description: <%= @item.input_group[:attrs].dig('description') %></span></h5>
   <div class="form">
 
     <div class="card border border-secondary p-2 mb-2">
